# mma

./: .gitignore  CMakeLists.txt
src/gcmma/: CMakeLists.txt
src/mma/: CMakeLists.txt
src/sparse_mma/: CMakeLists.txt  SparseMMASolver.cpp  SparseMMASolver.h  common.cpp  common.h
tests/: CMakeLists.txt  main.cpp  sparse.cpp
